# MassMedicaidPy

./: README.md  example.html  example.ipynb  pyproject.toml
MassMedicaidPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MassMedicaidPy/Condition_Information/: code_condition.py
MassMedicaidPy/Household_Information/: code_household.py
MassMedicaidPy/Plan_Information/: code_plan.py
MassMedicaidPy/results_info/: results.py
MassMedicaidPy/tests/: test_condition.py  test_household.py  test_plan.py  test_results.py
src/Condition_Information/: code_condition.py
src/Household_Information/: code_household.py
src/Income_Information/: income_bracket.py
src/Main/: main.py
src/Person_Information/: code_person.py
src/Plan_Information/: code_plan.py
src/results_info/: results.py
src/tests/: test_condition.py  test_plan.py
tests/: test_one.py
